--- a/src/iBlogs.Site.Application/iBlogs.Site.Application.csproj
+++ b/src/iBlogs.Site.Application/iBlogs.Site.Application.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Dto\" />
