--- a/src/iBlogs.Site.Web/iBlogs.Site.Web.csproj
+++ b/src/iBlogs.Site.Web/iBlogs.Site.Web.csproj
@@ -14,7 +14,6 @@
 
 
   <ItemGroup>
-    <PackageReference Include="CodeDi" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
@@ -22,7 +21,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\iBlogs.Site.Application\iBlogs.Site.Application.csproj" />
+    <ProjectReference Include="..\iBlogs.Site.Core\iBlogs.Site.Core.csproj" />
   </ItemGroup>
 
 </Project>
