--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -4,6 +4,11 @@
       "Default": "Warning"
     }
   },
+  "Auth": {
+    "JwtIssuer": "iBlogs",
+    "JwtExpireDays": "30",
+    "JwtKey": "CoderAyu"
+  },
   "SqLiteDbFileName": "iBlog.db",
   "DbInstalled": true,
   "AllowedHosts": "*"
