--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -7,7 +7,7 @@
   "Auth": {
     "JwtIssuer": "iBlogs",
     "JwtExpireDays": "30",
-    "JwtKey": "CoderAyu"
+    "JwtKey": "iBlogsCoderAyuGithub"
   },
   "SqLiteDbFileName": "iBlog.db",
   "DbInstalled": true,
