--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "HangfireConnection": "Data Source=Hangfire"
+  },
+  "HangfireConnection": "Data Source=Hangfire",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
