--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "HangfireConnection": "Data Source=Hangfire"
+    "iBlogs": "Server=coderbusy.cn;Database=iBlogs;uid=lzy;pwd=password123"
   },
-  "HangfireConnection": "Data Source=Hangfire",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
