--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=coderbusy.cn;Database=iBlogs;uid=lzy;pwd=password123"
+    "iBlogs": "Server=remotemysql.com;Database=CzBk4PymKu;uid=CzBk4PymKu;pwd=Qh2jiyTYfi"
   },
   "Logging": {
     "LogLevel": {
