--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=remotemysql.com;Database=CzBk4PymKu;uid=CzBk4PymKu;pwd=Qh2jiyTYfi"
+    "iBlogs": "Server=127.0.0.1;Database=iblogs;uid=root;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
@@ -13,6 +13,6 @@
     "JwtKey": "iBlogsCoderAyuGithub"
   },
   "SqLiteDbFileName": "iBlog.db",
-  "DbInstalled": true,
+  "DbInstalled": false,
   "AllowedHosts": "*"
 }
