--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -13,6 +13,6 @@
     "JwtKey": "iBlogsCoderAyuGithub"
   },
   "SqLiteDbFileName": "iBlog.db",
-  "DbInstalled": false,
+  "DbInstalled": true,
   "AllowedHosts": "*"
 }
