update config to enum

--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=localhost;Database=iblogs;uid=root;pwd=123456"
+    "iBlogs": "Server=localhost;Database=iBlogs;uid=root;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
