--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -12,6 +12,6 @@
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DbInstalled": true,
+  "DbInstalled": false,
   "AllowedHosts": "*"
 }
