Add exception filter

--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=localhost;Database=iBlogs;uid=root;pwd=123456"
+    "iBlogs": "Server=127.0.0.1;Database=iBlogs;uid=root;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
@@ -12,6 +12,6 @@
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DbInstalled": false,
+  "DbInstalled": true,
   "AllowedHosts": "*"
 }
