Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   buildConfiguration: 'Release'
   dockerId: liuzhenyulive
   imageName: iblogs
-  pwd: $(dockerPwd)
+  pswd: $(dockerPwd)
 
 steps:
 - task: DockerInstaller@0
