--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,3 +49,4 @@ steps:
     docker build -t $(dockerId)/$(imageName) -f ./src/iBlogs.Site.Web/Dockerfile .
     docker login -u $(dockerId) -p $(pswd)
     docker push $(dockerId)/$(imageName)
+  displayName: 'docker build and push $(buildConfiguration)'
