--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ steps:
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
 
-- script: cp ./deploy/* ${Build.ArtifactStagingDirectory}
+- script: cp ./deploy/* $(Build.ArtifactStagingDirectory)
   displayName: 'copy deploy script to artifact staging directory'
 
 - task: PublishBuildArtifacts@1
