--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,5 +50,5 @@ steps:
 - script: |
     docker build -t $(dockerId)/$(imageName) -f ./src/iBlogs.Site.Web/Dockerfile .
     docker login -u $(dockerId) -p $(pswd)
-    docker push $(dockerId)/$(imageName)
+    docker push $(dockerId)/$(imageName):$(Build.BuildNumber)
   displayName: 'docker build and push $(buildConfiguration)'
