--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ steps:
   displayName: 'publish artifacts'
 
 - script: |
-    docker build -t $(dockerId)/$(imageName) -f ./src/iBlogs.Site.Web/Dockerfile .
+    docker build -t $(dockerId)/$(imageName):$(Build.BuildNumber) -f ./src/iBlogs.Site.Web/Dockerfile .
     docker login -u $(dockerId) -p $(pswd)
     docker push $(dockerId)/$(imageName):$(Build.BuildNumber)
   displayName: 'docker build and push $(buildConfiguration)'
