Add build number to view

--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=127.0.0.1;Database=iBlogs;uid=root;pwd=123456"
+    "iBlogs": "Server=localhost;Database=iblogs;uid=root;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
@@ -13,5 +13,6 @@
     "JwtKey": "iBlogsCoderAyuGithub"
   },
   "DbInstalled": false,
+  "BuildNumber": "20190701.01",
   "AllowedHosts": "*"
 }
