--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -12,7 +12,7 @@
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DbInstalled": false,
+  "DbInstalled": true,
   "BuildNumber": "20190701.01",
   "AllowedHosts": "*"
 }
