--- a/src/Serilog.Sinks.MySQL/Serilog.Sinks.MySQL.csproj
+++ b/src/Serilog.Sinks.MySQL/Serilog.Sinks.MySQL.csproj
@@ -9,38 +9,31 @@
         <PackageTags>serilog;logging;MySQL</PackageTags>
         <PackageIconUrl>http://serilog.net/images/serilog-sink-nuget.png</PackageIconUrl>
         <PackageProjectUrl>http://serilog.net</PackageProjectUrl>
+        <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/saleem-mirza/serilog-sinks-mysql</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <Copyright>Copyright © Zethian Inc. 2013-2019</Copyright>
-        <AssemblyVersion>4.5.0.0</AssemblyVersion>
-        <Version>4.5.0</Version>
+        <Copyright>Copyright © Zethian Inc. 2013-2018</Copyright>
+        <AssemblyVersion>4.0.0.0</AssemblyVersion>
+        <Version>4.0.0</Version>
         <SignAssembly>True</SignAssembly>
         <AssemblyOriginatorKeyFile>Serilog.snk</AssemblyOriginatorKeyFile>
-        <TargetFrameworks>netstandard2;netcoreapp2.1</TargetFrameworks>
+        <TargetFrameworks>netstandard1.6;netstandard2;netcoreapp2.1</TargetFrameworks>
     </PropertyGroup>
-    <PropertyGroup>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    </PropertyGroup>
-    <ItemGroup>
-        <None Include="..\..\LICENSE">
-            <Pack>true</Pack>
-            <PackagePath></PackagePath>
-        </None>
-    </ItemGroup>
+
     <PropertyGroup Condition="'$(VersionSuffix)'!='' ">
         <Version>$(Version)-$(VersionSuffix)</Version>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-        <PackageReference Include="MySql.Data" Version="8.0.15" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-        <PackageReference Include="Serilog" Version="2.8.0" />
-        <PackageReference Include="System.Data.Common" Version="4.3.0" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.5.0"/>
+        <PackageReference Include="MySql.Data" Version="8.0.12"/>
+        <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
+        <PackageReference Include="Serilog" Version="2.7.1"/>
+        <PackageReference Include="System.Data.Common" Version="4.3.0"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Properties\" />
+        <Folder Include="Properties\"/>
     </ItemGroup>
 
 </Project>
