--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -7,13 +7,13 @@
       "Default": "Warning"
     }
   },
-  "RedisConnectionString": "IsSSDB=false;ReadWriteHost=127.0.0.1:6379;ReadOnlyHost=127.0.0.1:6379;ConnectTimeout=3000;SendTimeout=2000;RetryTimeout=2000;MaxWritePoolSize=1000;MaxReadPoolSize=1000;AutoStart=true;DefaultExpiredTime=02:00:00.00;password=123456",
+  "RedisConnectionString": "127.0.0.1:6379,password=123456",
   "Auth": {
     "JwtIssuer": "iBlogs",
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DbInstalled": true,
+  "DbInstalled": false,
   "BuildNumber": "20190701.01",
   "AllowedHosts": "*"
 }
