Fix issue and add service factory

--- a/src/iBlogs.Site.Web/appsettings.json
+++ b/src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=localhost;Database=iblogs;uid=root;pwd=123456"
+    "iBlogs": "Server=127.0.0.1;Database=iblogs;uid=root;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
@@ -13,7 +13,7 @@
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DbInstalled": false,
+  "DbInstalled": true,
   "BuildNumber": "20190701.01",
   "AllowedHosts": "*"
 }
