--- a/src/iBlogs.Site.Web/iBlogs.Site.Web.csproj
+++ b/src/iBlogs.Site.Web/iBlogs.Site.Web.csproj
@@ -23,8 +23,8 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\thirdPart\Serilog.Sinks.MySQL\Serilog.Sinks.MySQL.csproj" />
     <ProjectReference Include="..\iBlogs.Site.Core\iBlogs.Site.Core.csproj" />
-    <ProjectReference Include="..\Serilog.Sinks.MySQL\Serilog.Sinks.MySQL.csproj" />
   </ItemGroup>
 
 
