--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -8,6 +8,9 @@
     }
   },
   "RedisConnectionString": "127.0.0.1:6379,password=123456",
+  "RabbitMqHost": "localhost",
+  "RabbitMqPWD": "gust",
+  "RabbitMqUID": "gust",
   "Auth": {
     "JwtIssuer": "iBlogs",
     "JwtExpireDays": "30",
