--- a/Src/iBlogs.Site.Core/iBlogs.Site.Core.csproj
+++ b/Src/iBlogs.Site.Core/iBlogs.Site.Core.csproj
@@ -13,6 +13,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.0" />
+    <PackageReference Include="DotNetCore.CAP" Version="2.5.1" />
+    <PackageReference Include="DotNetCore.CAP.MySql" Version="2.5.1" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="2.5.1" />
     <PackageReference Include="Markdig" Version="0.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
