--- a/Src/iBlogs.Site.Web/Dockerfile
+++ b/Src/iBlogs.Site.Web/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
-WORKDIR /src
+WORKDIR /Src
 COPY ["src/iBlogs.Site.Web/iBlogs.Site.Web.csproj", "src/iBlogs.Site.Web/"]
 RUN dotnet restore "src/iBlogs.Site.Web/iBlogs.Site.Web.csproj"
 COPY . .
