--- a/Src/iBlogs.Site.Web/Dockerfile
+++ b/Src/iBlogs.Site.Web/Dockerfile
@@ -4,10 +4,10 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
 WORKDIR /Src
-COPY ["src/iBlogs.Site.Web/iBlogs.Site.Web.csproj", "src/iBlogs.Site.Web/"]
-RUN dotnet restore "src/iBlogs.Site.Web/iBlogs.Site.Web.csproj"
+COPY ["Src/iBlogs.Site.Web/iBlogs.Site.Web.csproj", "Src/iBlogs.Site.Web/"]
+RUN dotnet restore "Src/iBlogs.Site.Web/iBlogs.Site.Web.csproj"
 COPY . .
-WORKDIR "/src/src/iBlogs.Site.Web"
+WORKDIR "/Src/Src/iBlogs.Site.Web"
 RUN dotnet build "iBlogs.Site.Web.csproj" -c Release -o /app
 
 FROM build AS publish
