--- a/Src/iBlogs.Site.Core/iBlogs.Site.Core.csproj
+++ b/Src/iBlogs.Site.Core/iBlogs.Site.Core.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="DotNetCore.CAP" Version="2.5.1" />
     <PackageReference Include="DotNetCore.CAP.MySql" Version="2.5.1" />
     <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="2.5.1" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
     <PackageReference Include="Markdig" Version="0.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
