Add option manage page

--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -8,9 +8,9 @@
     }
   },
   "RedisConnectionString": "127.0.0.1:6379,password=123456",
-  "RabbitMqHost": "data.iblogs.site",
-  "RabbitMqPWD": "lzy",
-  "RabbitMqUID": "LZY2018",
+  "RabbitMqHost": "localhost",
+  "RabbitMqPWD": "guest",
+  "RabbitMqUID": "guest",
   "Auth": {
     "JwtIssuer": "iBlogs",
     "JwtExpireDays": "30",
