--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "iBlogs": "Server=127.0.0.1;Database=iblogs;uid=root;pwd=123456"
+    "iBlogs": "Server=localhost;Database=iblogs;uid=root;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
