--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -1,16 +1,16 @@
 {
-  "ConnectionStrings": {
-    "iBlogs": "Server=localhost;Database=iblogs;uid=root;pwd=123456"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "RedisConnectionString": "127.0.0.1:6379,password=123456",
-  "RabbitMqHost": "localhost",
-  "RabbitMqPWD": "guest",
-  "RabbitMqUID": "guest",
+  "AutoDataSyncHours": 1,
+  "GitUrl": "",
+  "UserName": "",
+  "Password": "",
+  "BranchName": "",
+  "CommitterName ": "",
+  "CommitterEmail ": "",
   "Auth": {
     "JwtIssuer": "iBlogs",
     "JwtExpireDays": "30",
