--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -16,7 +16,7 @@
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DbInstalled": false,
+  "DataIsSynced": false,
   "BuildNumber": "20190701.01",
   "AllowedHosts": "*"
 }
