update appsetting key

--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -6,8 +6,8 @@
   },
   "AutoDataSyncHours": 1,
   "GitUrl": "",
-  "UserName": "",
-  "Password": "",
+  "GitUid": "",
+  "GitPwd": "",
   "BranchName": "",
   "CommitterName ": "",
   "CommitterEmail ": "",
