--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,8 @@ steps:
   inputs:
     command: publish
     publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration)'
+    arguments: '--configuration $(BuildConfiguration) -o $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
     
 - script: mkdir $(Build.ArtifactStagingDirectory)/Deploy && cp ./Deploy/* $(Build.ArtifactStagingDirectory)/Deploy
   displayName: 'copy Deploy script to artifact staging directory'
@@ -47,9 +48,3 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
-
-- script: |
-    docker build -t $(dockerId)/$(imageName):$(Build.BuildNumber) -f ./Src/iBlogs.Site.Web/Dockerfile .
-    docker login -u $(dockerId) -p $(pswd)
-    docker push $(dockerId)/$(imageName):$(Build.BuildNumber)
-  displayName: 'docker build and push $(buildConfiguration)'
