change git data sync service to static class

--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AutoDataSyncHours": 1,
+  "AutoDataSyncMinutes": 10,
   "GitUrl": "",
   "GitUid": "",
   "GitPwd": "",
