add blogs timer

--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -5,9 +5,9 @@
     }
   },
   "AutoDataSyncMinutes": 10,
-  "GitUrl": "",
-  "GitUid": "",
-  "GitPwd": "",
+  "GitUrl": "https://github.com/liuzhenyulive/iblogs.site.git",
+  "GitUid": "liuzhenyulive@live.com",
+  "GitPwd": "LZYjiuyuan2018",
   "BranchName": "",
   "CommitterName ": "",
   "CommitterEmail ": "",
@@ -16,7 +16,7 @@
     "JwtExpireDays": "30",
     "JwtKey": "iBlogsCoderAyuGithub"
   },
-  "DataIsSynced": false,
+  "DataIsSynced": "true",
   "BuildNumber": "20190701.01",
   "AllowedHosts": "*"
 }
