fix the issue of cannot upload data to github

--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -5,9 +5,9 @@
     }
   },
   "AutoDataSyncMinutes": 10,
-  "GitUrl": "https://github.com/liuzhenyulive/iblogs.site.git",
-  "GitUid": "liuzhenyulive@live.com",
-  "GitPwd": "LZYjiuyuan2018",
+  "GitUrl": "",
+  "GitUid": "",
+  "GitPwd": "",
   "BranchName": "",
   "CommitterName ": "",
   "CommitterEmail ": "",
