config jwt key dynamic

--- a/Src/iBlogs.Site.Web/appsettings.json
+++ b/Src/iBlogs.Site.Web/appsettings.json
@@ -11,12 +11,11 @@
   "BranchName": "",
   "CommitterName ": "",
   "CommitterEmail ": "",
-  "Auth": {
-    "JwtIssuer": "iBlogs",
-    "JwtExpireDays": "30",
-    "JwtKey": "iBlogsCoderAyuGithub"
-  },
+  "JwtIssuer": "iBlogs",
+  "JwtExpireDays": "30",
+  "JwtKey": "iBlogsCoderAyuGithub",
   "DataIsSynced": "true",
-  "BuildNumber": "20190701.01",
-  "AllowedHosts": "*"
+  "BuildNumber": "20191103.3",
+  "AllowedHosts": "*",
+  "DbInstalled": true
 }
